@@ -4,29 +4,57 @@ import java.sql.Connection;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
-import db_project.db.AbstractTable;
+import db_project.db.AbstractCompositeKeyTable;
+import db_project.db.JsonReadeable;
 import db_project.db.queryUtils.QueryResult;
 import db_project.model.PathInfo;
+import db_project.utils.AbstractJsonReader;
 
-public class PathInfoTable extends AbstractTable<PathInfo, String> {
+public class PathInfoTable extends AbstractCompositeKeyTable<PathInfo, Object>
+    implements JsonReadeable<PathInfo> {
   public static final String TABLE_NAME = "DETTAGLIO_PERCORSO";
-  public static final String PRIMARY_KEY = "codTratta";
+  public static final List<String> PRIMARY_KEY = List.of("codPercorso", "ordine", "codTratta");
+  private final Logger logger;
 
   public PathInfoTable(final Connection connection) {
     super(TABLE_NAME, connection);
     super.setPrimaryKey(PRIMARY_KEY);
-    super.setTableColumns(List.of("ordine", "codPercorso"));
+    super.setTableColumns(Collections.emptyList());
+    this.logger = Logger.getLogger("CityTable");
+    this.logger.setLevel(Level.WARNING);
   }
 
   @Override
   protected Object[] getSaveQueryParameters(final PathInfo pathInfo) {
-    return new Object[] {pathInfo.getSectionId(), pathInfo.getOrderNumber(), pathInfo.getPathId()};
+    return new Object[] {pathInfo.getPathId(), pathInfo.getOrderNumber(), pathInfo.getSectionId()};
   }
 
   @Override
   protected Object[] getUpdateQueryParameters(final PathInfo pathInfo) {
-    return new Object[] {pathInfo.getOrderNumber(), pathInfo.getPathId(), pathInfo.getSectionId()};
+    return new Object[] {
+      pathInfo.getPathId(),
+      pathInfo.getOrderNumber(),
+      pathInfo.getSectionId(),
+      pathInfo.getPathId(),
+      pathInfo.getOrderNumber(),
+      pathInfo.getSectionId()
+    };
+  }
+
+  @Override
+  public boolean createTable() {
+    final String query =
+        "create table DETTAGLIO_PERCORSO ( "
+            + "codTratta varchar(5) not null, "
+            + "codPercorso varchar(5) not null, "
+            + "ordine varchar(10) not null, "
+            + "constraint ID_DETTAGLIO_PERCORSO_ID primary key (codPercorso, codTratta, ordine)); ";
+
+    super.created = super.parser.computeSqlQuery(query, null);
+    return super.isCreated();
   }
 
   @Override
@@ -40,12 +68,23 @@ public class PathInfoTable extends AbstractTable<PathInfo, String> {
         .get()
         .forEach(
             row -> {
-              System.out.println(row.toString());
+              logger.info(row.toString());
               final String sectionId = (String) row.get("codTratta");
-              final int orderNumber = (int) row.get("ordine");
+              final String orderNumber = (String) row.get("ordine");
               final String pathId = (String) row.get("codPercorso");
               pathInfos.add(new PathInfo(sectionId, orderNumber, pathId));
             });
     return pathInfos;
+  }
+
+  @Override
+  public boolean update(final PathInfo updatedValue) {
+    return false;
+  }
+
+  @Override
+  public List<PathInfo> readFromFile() {
+    return new AbstractJsonReader<PathInfo>() {}.setFileName("DbPathInfo.json")
+        .retreiveData(PathInfo.class);
   }
 }
